Use release instead of source and target
Fixes #1097

Signed-off-by: David Thompson <davthomp@redhat.com>